SUBDIRS = server server/tests account-setup-eplugin camel calendar
DIST_SUBDIRS = server account-setup-eplugin camel calendar

changelogs =			\
	ChangeLog

EXTRA_DIST = 			\
	$(changelog)		\
	intltool-merge.in	\
	intltool-update.in	\
	intltool-extract.in	

CLEANFILES = 	intltool-merge	\
		intltool-update	\
		intltool-extract	

-include $(top_srcdir)/git.mk
