SUBDIRS = server server/tests utils camel account-setup-eplugin calendar
DIST_SUBDIRS = server utils camel account-setup-eplugin calendar

changelogs =			\
	ChangeLog

EXTRA_DIST = 			\
	$(changelog)		\
	intltool-merge.in	\
	intltool-update.in	\
	intltool-extract.in	

CLEANFILES = 	intltool-merge	\
		intltool-update	\
		intltool-extract	

-include $(top_srcdir)/git.mk
